Fixed responsive desing

--- a/index.html
+++ b/index.html
@@ -78,23 +78,29 @@
           </div>
         </div>
       </nav>
+
       <div
-        class="conteiner"
+        class="hero-image"
         style="background-image: url(images/back_image.jpg)"
-        id="image"
       >
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <h2>HI THERE, I'M</h2>
-            <h1>ANDRIANA SLOBOZHENIUK</h1>
-            <h3>🇺🇦 Front-end developer, based in Ukraine</h3>
-            <a href="contact.html" title="Contact" class="btn btn-branding"
-              >Get started</a
-            >
+        <div class="conteiner">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <h2>HI THERE, I'M</h2>
+              <h1>ANDRIANA SLOBOZHENIUK</h1>
+              <h3>🇺🇦 Front-end developer, based in Ukraine</h3>
+              <a href="contact.html" title="Contact" class="btn btn-branding"
+                >Get started</a
+              >
+            </div>
           </div>
         </div>
       </div>
-
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h4 id="myproject">MY PROJECT</h4>
+        </div>
+      </div>
       <div class="card">
         <div class="conteiner">
           <div class="row">
