--- a/contact.html
+++ b/contact.html
@@ -80,85 +80,66 @@
           </div>
         </div>
       </nav>
-
-      <div
-        class="hero-image"
-        style="background-image: url(images/back_image.jpg)"
-      >
-        <div class="conteiner">
-          <div class="row">
-            <div class="col-md-12 text-center">
-              <h2>HI THERE, I'M</h2>
-              <h1>ANDRIANA SLOBOZHENIUK</h1>
-              <h3>🇺🇦 Front-end developer, based in Ukraine</h3>
-              <a
-                href="about.html"
-                title="Contact"
-                class="btn btn-branding"
-                target="_blank"
-                >Get started</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h4 id="myproject">MY PROJECT</h4>
-        </div>
-      </div>
-      <div class="card">
-        <div class="conteiner">
-          <div class="row">
-            <div class="col-md-6 text-center">
-              <img
-                src="images/weatherapp.png"
-                class="img-fluid"
-                alt="Weatherapp images"
-                class="logo"
-                id="home-page-image"
-              />
-            </div>
-            <div class="col-md-6" id="c">
-              <h2 class="mb-3" id="position">WEATHER APP</h2>
-              <p class="app-description">
-                This app is built with Javascript, HTML, CSS and Bootstrap. Data
-                delivers by API integrations. App features - search engine,
-                current location weather, 5-day forecast.
-              </p>
-              <div class="mt-5">
-                <a
-                  href="https://incomparable-stroopwafel-59c5b2.netlify.app/"
-                  target="_blank"
-                  class="primary-link project-link"
-                  title="Weatherapp project"
-                  >WEATHER APP</a
-                >
+    </div>
+    <div class="content-container container">
+      <div class="content">
+        <h2 class="mb-3" id="position">Let's get in touch!</h2>
+        <div class="row">
+          <div class="col-md-8">
+            <form
+              action="https://formspree.io/f/mwkalajy"
+              method="POST"
+              class="border border-dark-subtle border-2 p-3 rounded mb-3"
+            >
+              <div class="mb-3">
+                <label class="form-label"> Your email: </label>
+                <input
+                  type="email"
+                  name="_replyto"
+                  class="form-control"
+                  required
+                  autofocus
+                />
               </div>
-            </div>
+              <div class="mb-3">
+                <label class="form-label"> Your message: </label>
+                <textarea
+                  name="message"
+                  class="form-control"
+                  required
+                ></textarea>
+              </div>
+
+              <!-- your other form fields go here -->
+
+              <button type="submit" class="btn btn-branding">Send</button>
+            </form>
+          </div>
+          <div class="col-md-4">
+            <h3 id="hero">Email</h3>
+            <p>
+              <a
+                href="mailto: andriana99@gmail.com"
+                class="mailto_contact"
+                title="Email me"
+                >andriana99@gmail.com</a
+              >
+            </p>
+            <h3 id="hero">Instagram</h3>
+            <p>
+              <a
+                href="https://www.instagram.com/andriana.sl/"
+                class="mailto_contact"
+                target="_blank"
+                title="Instagram page"
+              >
+                @andriana.sl
+              </a>
+            </p>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="contact-box justify-content-evenly b-5 d-none d-md-flex">
-      <div>
-        <h3>Work Inquiry</h3>
-        <p class="text-muted">Let's work together</p>
-      </div>
-      <div></div>
-      <div>
-        <a
-          href="contact.html"
-          class="btn btn-branding mt-3"
-          title="Contact Andrina"
-          target="_blank"
-        >
-          Contact me
-        </a>
-      </div>
-    </div>
-
     <footer>
       <div>
         <a
