Fixed SEO details

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             <img
               src="images/photo.jpg"
               class="img-fluid"
-              alt="Weatherapp images"
+              alt="Hero images"
               class="logo"
               id="photo-image"
             />
@@ -134,7 +134,7 @@
           <img
             src="images/base.png"
             class="img-fluid"
-            alt="Weatherapp images"
+            alt="Certificates"
             class="logo"
             id="certificates"
           />
@@ -143,7 +143,7 @@
           <img
             src="images/web.png"
             class="img-fluid"
-            alt="Weatherapp images"
+            alt="Certificates Web"
             class="logo"
             id="certificates_web"
           />
@@ -163,7 +163,7 @@
         <a
           href="contact.html"
           class="btn btn-branding mt-3"
-          title="Contact Patricia"
+          title="Contact Andriana"
           target="_blank"
         >
           Contact me
