--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       name="description"
       content="Andriana Slobozheniuk is a front-end developer based in Ukraine, check out his projects and contact him for job inquiries"
     />
-    <title>Andriana Sl - Front-End Developer</title>
+    <title>Andriana Sl - Contact</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
@@ -109,8 +109,6 @@
                   required
                 ></textarea>
               </div>
-
-              <!-- your other form fields go here -->
 
               <button type="submit" class="btn btn-branding">Send</button>
             </form>
